(feat): git ignore local changes + renaming

--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
 \headheight=0pt %1in margins at top and bottom (1 inch is added to this value by default)
 \headsep=0pt %Increase to increase white space in between headers and the top of the page
 \textheight=9.5in %How tall the text body is allowed to be on each page
-
+ 
 \usepackage{xcolor}
 
 \definecolor{linkcolor}{RGB}{105,0,0}
@@ -23,20 +23,20 @@
 \newcommand\smallspace[1][0.23cm]{\hspace*{#1}}
 \newcommand\negativespace[1][-0.12cm]{\hspace*{#1}}
 
-%\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc} 
 %\usepackage{libertine}
 
 
 \begin{document}
 
-\centerline{{\LARGE \bf Dipl. Ing. Matthias Klan}}
-\centerline{\small \href{https://klanm.at}{klanm.at} \raisebox{0.25ex}{\tiny$\bullet$}  \href{mailto:mklan@pm.me}{mklan@pm.me}}
+\centerline{{\LARGE \bf Dipl. Ing. Jonas Laux, BSc.}}
+\centerline{\href{mailto:me@jonas-laux.com}{me@jonas-laux.com}}
 
 
 \noindent %Prevents the following text from being indented
 \\\\
 \vspace*{-6pt}
-{\negativespace \Large \bf Recent Professional Experience}\\
+{\negativespace \Large \bf Recent Professional Experience TEST}\\
 \line(1,0){485}
 \\
 \noindent
@@ -89,7 +89,7 @@ millions new images/day, which are piped through ml ocr processes.
 \end{itemize}
 
 \noindent
-Rest of past experience on \href{https://linkedin.com/in/matthias-klan}{Linkedin} \\
+Rest of past experience on \href{https://linkedin.com/in/jonas-laux-2aaaa8105}{Linkedin} \\
 
 %\noindent
 %{\bf Unity-/Web-Developer}, \textit{freelancer at Sabotage Films}  \hfill \textit{ September -- November 2015 } \\ 
