--- a/cv.tex
+++ b/cv.tex
@@ -36,82 +36,57 @@
 \noindent %Prevents the following text from being indented
 \\\\
 \vspace*{-6pt}
-{\negativespace \Large \bf Recent Professional Experience TEST}\\
+{\negativespace \Large \bf Recent Professional Experience}\\
 \line(1,0){485}
 \\
 \noindent
 
 \noindent
-{\bf Senior Software-Engineer}, \textit{employee at \href{https://dynatrace.com}{Dynatrace}}  \hfill \textit{from June 2022}
+{\bf Senior Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}  \hfill \textit{from June 2022}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item CLI tools to enhance developer experience when integrating dynatrace products (Node.js)
-\item VS Code Extension for assisting developers building dynatrace apps (TypeScript)\\
+\item Establish best-practice and ISO-compliant IaC for optimal scalability and \hfill Vienna, Austria \\
+performance, while offering cloud setup consultation.
+\item Design, implement and deploy highly scalable workloads using Cloud native \\
+architectures in domains like Datalake, ML and internal services.
+\item Consultation to ensure effective cloud implementation, project requirements \\
+code reviews, and technical guidance to developers. \\
+(GCP, Azure, AWS, DevOps, Full-Stack, Kubernetes, Node.js, React, IaC) \\
 \end{itemize}
 
 \noindent
-{\bf Senior Web-Engineer}  \hfill \textit{January - June 2022} \\
-{\bf Web-Engineer}, \textit{employee at \href{https://anyline.com}{Anyline GmbH}}  \hfill \textit{November 2018 - December 2021} 
+{\bf Technical Architect}, \textit{employee at \href{https://www.oebb.at/}{OEBB}}  \hfill \textit{January 2022 -- April 2022}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Responsible for storing/structuring/retrieving a steady growing db of  \hfill Vienna, Austria \\ 
-millions new images/day, which are piped through ml ocr processes.
-\item Responsible for the core-backend design and implementation (NestJS)
-\item Responsible for the \href{https://github.com/Anyline/anyline-ocr-anylinejs-module}{ocr js SDK} development/releases (TypeScript, wasm) \\
+\item Support the cloud migration of all systems and comprehend \hfill Vienna, Austria \\
+enterprise architecture for effective feature development.
+\item Collaborate with developers for project adherence and proactively \\ 
+strategize for product improvements. \\
+(Azure, Java, Kubernetes, Node.js) \\
 \end{itemize}
 
 \noindent
-{\bf Software-Engineer}, \textit{co-founder of Apollon OG}  \hfill \textit{June 2019 -- August 2020}
+{\bf Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}\hfill \textit{May 2021 - December 2022} \\
+{\bf Full-Stack Engineer \& Cross-Platform App Engineer}  \hfill \textit{March 2016 - May 2021} 
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Architect/dev of MedTech streamlining oncology processes in hospitals \hfill Vienna, Austria \\
+\item Responsible for the core-backend design and implementation \hfill Vienna, Austria 
+\item Responsible for infrastructure of storing/structuring/retrieving a steady \\ 
+growing stream of millions new images per day \\
+(GCP, Azure, AWS, Kubernetes, Node.js, React, DevOps, React-Native, Cordova) \\
+\end{itemize}
+
+\noindent
+{\bf Software-Engineer}, \textit{co-founder of Apollon OG}  \hfill \textit{May 2019 -- August 2021}
+\begin{itemize}
+\setlength\itemsep{0.05em}
+\item Architect/development of MedTech, streamlining oncology processes in hospitals \hfill Vienna, Austria \\
 (GCP, Kubernetes, Node.js, GraphQL, React) \\
 \end{itemize}
 
 \noindent
-{\bf DevOps/Software-Engineer}, \textit{employee at \href{https://eodc.eu}{EODC GmbH}}  \hfill \textit{May -- November 2018}
-\begin{itemize}
-\setlength\itemsep{0.05em}
-    \item Deployment of services processing ESA's satelite EO data (Docker, OpenShift) \hfill Vienna, Austria
-    \item Bootstrapped a platform to market and consume said services in a centralized way \\
-    (React, Node.js, GraphQL, Postgres, Stripe, Keycloak) \\
-\end{itemize}
+Additional professional experiences on my \href{https://www.linkedin.com/in/jonas-laux-2aaaa8105}{LinkedIn} \\
 
-\noindent
-{\bf Web-Developer}, \textit{employee at \href{https://viewar.com}{ViewAR GmbH}}  \hfill \textit{November 2016 -- May 2018}
-\begin{itemize}
-\setlength\itemsep{0.05em}
-    \item Introduced React and refactored the old AngularJS codebase into \hfill Vienna, Austria \\
-    a component based template engine
-    \item Developed a \href{https://www.youtube.com/watch?v=0j-v-j9xEUQ}{p2p-framework} for mirroring 3D models + camera feed \\
-    (WebGL, WebRTC, ViewAR SDK)
-    \item Developed an \href{https://www.youtube.com/watch?v=quE-erJ4PmU&t=113s}{editor} for 3D app assets (React, WebGL) \\
-\end{itemize}
-
-\noindent
-Rest of past experience on \href{https://linkedin.com/in/jonas-laux-2aaaa8105}{Linkedin} \\
-
-%\noindent
-%{\bf Unity-/Web-Developer}, \textit{freelancer at Sabotage Films}  \hfill \textit{ September -- November 2015 } \\ 
-%Augmented Reality in Unity, Virtual Reality using three.js\\\\
-%\noindent
-
-% \noindent
-% {\bf Web-Developer}, \textit{freelancer at \href{https://youtu.be/cs-IyI_erZo?t=16}{Immowire UG}}  \hfill \textit{July 2014 -- October 2015}
-% \begin{itemize}
-%     \setlength\itemsep{0.05em}
-% \item Developed core-features for a social real estate  \href{https://youtu.be/cs-IyI_erZo?t=16}{platform} \hfill Remote from Vienna, Austria \\ 
-% (AngularJS, WebSocket, Node.js/Sails, OrientDB)\\
-% \end{itemize}
-
-%{\bf Java Tutor}, \textit{student assistent at THM}  \hfill \textit{ October 2013 -- February 2014 } \\ 
-%Teaching development\\\\
-%\noindent
-% {\bf Web-Developer}, \textit{internship at Shopgate GmbH}  \hfill Butzbach, Germany \\ 
-% Backend-Development for Mobile-Commerce using CakePHP \hfill \textit{ March -- September 2013 }  
-
-%{\bf Web-Developer}, \textit{student worker at kaufhaus.com}  \hfill \textit{ October 2012 -- February 2013 } \\ 
-%Backend-Development for an online marketplace using Zend 2\\\\
 \noindent %Prevents the following text from being indented
 \\
 \vspace*{-6pt}
@@ -119,28 +94,26 @@ Rest of past experience on \href{https://linkedin.com/in/jonas-laux-2aaaa8105}{L
 \line(1,0){485}\\
 \\
 \noindent
-{\bf Master of Science - Media Informatics} \hfill \textit{June 2018} \\ 
-\textit{Universität Wien (Thesis: Rnd of a cloud video object tracker [Vue.js, Docker, RabbitMQ, OpenCV])}\\\\
+{\bf Master of Science - Media Informatics} \hfill \textit{2018} \\ 
+\textit{Universität Wien (Thesis: Rnd for an automized training for CNNs with generated Data [Flask, Tensorflow])} \\\\
 \noindent
-{\bf Bachelor of Science - Media Informatics} \hfill \textit{October 2013} \\
-\textit{Technische Hochschule Mittelhessen (Thesis: Rnd of a Shopfront-Editor [backbonejs])}\\
+{\bf Bachelor of Science - Media Informatics} \hfill \textit{2013} \\
+\textit{Technische Hochschule Mittelhessen (Thesis: API concept for an E-Commerce Marketplace [Zend])} \\
 \\
 %\noindent
 \\
 \vspace*{-6pt}
-{\negativespace \Large \bf Skills}\\
+{\negativespace \Large \bf Publications}\\
+\line(1,0){485}\\
+{\bf \href{https://www.researchgate.net/publication/354259954_Toward_a_Platform_for_Structured_Data_Acquisition_in_Oncology_A_Pilot_Study_on_Prostate_Cancer_Screening}{Toward a Platform for Structured Data Acquisition in Oncology}} \hfill \textit{August 2021} \\ 
+A Pilot Study on Prostate Cancer Screening \\ 
+\\
+\\
 \line(1,0){485}\\
 \\
 \noindent
-{\bf Responsive Web-Apps } (\textit{TypeScript, React, Vue, Svelte, Electron, WebRTC, WebGL}) \\
-{\bf Distributed Web-Services } (\textit{Node.js, NestJS, Python, AMQP, CQRS, Redis, SQL/NoSQL, data warehouse}) \\
-{\bf API Design }(\textit{REST, GraphQL, openAPI, oAuth2}) \\
-{\bf Testing }(\textit{Jest, Puppeteer, device farms}) \\
-{\bf Deployment }(\textit{GCP, AWS, Docker/Kubernetes, CI/CD, serverless, edge computing}) \\
-{\bf Misc }(\textit{cli-apps, data migration, UI/UX design, mentoring}) \\\\
-\noindent
-{\bf Advocate of:} Functional/reactive programming, QA/test-automation, microservice architecture,\\ 
- \tab \tab \smallspace event sourcing, small + frequent releases
+{\bf Advocate of:} IaC, QA/test-automation, cloud-native architecture, small \& frequent releases,\\ 
+ \tab \tab \smallspace value teams, no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.), \\
 
 
 \end{document}
