chore: reformat the layout

--- a/cv.tex
+++ b/cv.tex
@@ -100,7 +100,6 @@ Additional professional experiences on my \href{https://www.linkedin.com/in/jona
 {\bf Bachelor of Science - Media Informatics} \hfill \textit{2013} \\
 \textit{Technische Hochschule Mittelhessen (Thesis: API concept for an E-Commerce Marketplace [Zend])} \\
 \\
-%\noindent
 \\
 \vspace*{-6pt}
 {\negativespace \Large \bf Publications}\\
@@ -109,11 +108,13 @@ Additional professional experiences on my \href{https://www.linkedin.com/in/jona
 A Pilot Study on Prostate Cancer Screening \\ 
 \\
 \\
-\line(1,0){485}\\
+\\
+\\
+\\
 \\
 \noindent
 {\bf Advocate of:} IaC, QA/test-automation, cloud-native architecture, small \& frequent releases,\\ 
- \tab \tab \smallspace value teams, no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.), \\
+ \tab \tab \smallspace value teams, no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.) \\
 
 
 \end{document}
