--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 
 \begin{document}
 
-\centerline{{\LARGE \bf Dipl. Ing. Jonas Laux, BSc.}}
+\centerline{{\LARGE \bf Jonas Laux, M.Sc.}}
 \centerline{\href{mailto:me@jonas-laux.com}{me@jonas-laux.com}}
 
 
@@ -42,7 +42,9 @@
 \noindent
 
 \noindent
-{\bf Senior Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}  \hfill \textit{from June 2022}
+{\bf Senior Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}  \hfill \textit{from June 2022} \\
+{\bf Cloud Architect}, \hfill \textit{May 2021 - December 2022} \\
+{\bf Full-Stack Engineer} \hfill \textit{March 2016 - May 2021}
 \begin{itemize}
 \setlength\itemsep{0.05em}
 \item Establish best-practice and ISO-compliant IaC for optimal scalability and \hfill Vienna, Austria \\
@@ -50,8 +52,10 @@ performance, while offering cloud setup consultation.
 \item Design, implement and deploy highly scalable workloads using Cloud native \\
 architectures in domains like Datalake, ML and internal services.
 \item Consultation to ensure effective cloud implementation, project requirements \\
-code reviews, and technical guidance to developers. \\
-(GCP, Azure, AWS, DevOps, Full-Stack, Kubernetes, Node.js, React, IaC) \\
+code reviews, and technical guidance to developers.
+\item Responsible for the core-backend design and implementation
+\item Responsible for infrastructure of storing/structuring/retrieving a steady \\ 
+growing stream of millions new images per day
 \end{itemize}
 
 \noindent
@@ -61,31 +65,36 @@ code reviews, and technical guidance to developers. \\
 \item Support the cloud migration of all systems and comprehend \hfill Vienna, Austria \\
 enterprise architecture for effective feature development.
 \item Collaborate with developers for project adherence and proactively \\ 
-strategize for product improvements. \\
-(Azure, Java, Kubernetes, Node.js) \\
+strategize for product improvements.
 \end{itemize}
 
 \noindent
-{\bf Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}\hfill \textit{May 2021 - December 2022} \\
-{\bf Full-Stack Engineer \& Cross-Platform App Engineer}  \hfill \textit{March 2016 - May 2021} 
+{\bf Co-Founder \& Software-Engineer}, \textit{Apollon OG}  \hfill \textit{May 2019 -- August 2021}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Responsible for the core-backend design and implementation \hfill Vienna, Austria 
-\item Responsible for infrastructure of storing/structuring/retrieving a steady \\ 
-growing stream of millions new images per day \\
-(GCP, Azure, AWS, Kubernetes, Node.js, React, DevOps, React-Native, Cordova) \\
+\item Architect/development of MedTech, streamlining oncology processes in hospitals \hfill Vienna, Austria
 \end{itemize}
 
 \noindent
-{\bf Software-Engineer}, \textit{co-founder of Apollon OG}  \hfill \textit{May 2019 -- August 2021}
+{\bf Backend Developer}, \textit{employee at Immowire}  \hfill \textit{March 2015 -- December 2015}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Architect/development of MedTech, streamlining oncology processes in hospitals \hfill Vienna, Austria \\
-(GCP, Kubernetes, Node.js, GraphQL, React) \\
+\item Development of an Real-Estate marketplace with NodeJS and OrientDB \hfill Remote
 \end{itemize}
 
 \noindent
-Additional professional experiences on my \href{https://www.linkedin.com/in/jonas-laux-2aaaa8105}{LinkedIn} \\
+{\bf Web Developer}, \textit{employee at Kutech}  \hfill \textit{June 2014 -- December 2014}
+\begin{itemize}
+\setlength\itemsep{0.05em}
+\item Development of Webpages and Plugins for Redaxo-based customer solutions \hfill Asperhofen, Austria
+\end{itemize}
+
+\noindent
+{\bf Web Developer}, \textit{employee at Kaufhaus.com}  \hfill \textit{2012 - 2013}
+\begin{itemize}
+\setlength\itemsep{0.05em}
+\item Develop the backend \& frontend from a multi e-commerce platform with in PHP and JQuery \hfill Gießen, Germany
+\end{itemize}
 
 \noindent %Prevents the following text from being indented
 \\
@@ -95,7 +104,7 @@ Additional professional experiences on my \href{https://www.linkedin.com/in/jona
 \\
 \noindent
 {\bf Master of Science - Media Informatics} \hfill \textit{2018} \\ 
-\textit{Universität Wien (Thesis: Rnd for an automized training for CNNs with generated Data [Flask, Tensorflow])} \\\\
+\textit{Universität Wien (Thesis: \href{https://utheses.univie.ac.at/detail/48070/}{Rnd for an automized training for CNNs with generated Data} [Flask, Tensorflow])} \\\\
 \noindent
 {\bf Bachelor of Science - Media Informatics} \hfill \textit{2013} \\
 \textit{Technische Hochschule Mittelhessen (Thesis: API concept for an E-Commerce Marketplace [Zend])} \\
@@ -107,14 +116,13 @@ Additional professional experiences on my \href{https://www.linkedin.com/in/jona
 {\bf \href{https://www.researchgate.net/publication/354259954_Toward_a_Platform_for_Structured_Data_Acquisition_in_Oncology_A_Pilot_Study_on_Prostate_Cancer_Screening}{Toward a Platform for Structured Data Acquisition in Oncology}} \hfill \textit{August 2021} \\ 
 A Pilot Study on Prostate Cancer Screening \\ 
 \\
-\\
-\\
-\\
-\\
-\\
+
 \noindent
-{\bf Advocate of:} IaC, QA/test-automation, cloud-native architecture, small \& frequent releases,\\ 
- \tab \tab \smallspace value teams, no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.) \\
+{\bf Advocate of:}  IaC, QA/test-automation, cloud-native architecture, small \& frequent releases, value teams\\ 
+ \tab \tab \smallspace no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.) \\ \\
+\noindent
+{\bf Technologies:} \textbf{GCP, Terraform, Node.JS, Typescript, Serverless, Kubernetes BigQuery, PostGres, \\ 
+\tab \tab \smallspace  GraphQL, PubSub}, React, React-Native, AWS, Azure, Java, Python, ELK
 
 
 \end{document}
