--- a/cv.tex
+++ b/cv.tex
@@ -93,7 +93,7 @@ strategize for product improvements.
 {\bf Web Developer}, \textit{employee at Kaufhaus.com}  \hfill \textit{2012 - 2013}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Develop the backend \& frontend from a multi e-commerce platform with in PHP and JQuery \hfill Gießen, Germany
+\item Develop a multi e-commerce platform with PHP and JQuery \hfill Gießen, Germany
 \end{itemize}
 
 \noindent %Prevents the following text from being indented
