--- a/cv.tex
+++ b/cv.tex
@@ -79,7 +79,7 @@ strategize for product improvements.
 {\bf Backend Developer}, \textit{employee at Immowire}  \hfill \textit{March 2015 -- December 2015}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Development of an Real-Estate marketplace with NodeJS and OrientDB \hfill Remote
+\item Development, deployment and maintainance of an Real-Estate marketplace with NodeJS and OrientDB \hfill Remote
 \end{itemize}
 
 \noindent
@@ -93,7 +93,7 @@ strategize for product improvements.
 {\bf Web Developer}, \textit{employee at Kaufhaus.com}  \hfill \textit{2012 - 2013}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Develop a multi e-commerce platform with PHP and JQuery \hfill Gießen, Germany
+\item Develop, deploy and maintain a multi e-commerce platform with PHP and JQuery \hfill Gießen, Germany
 \end{itemize}
 
 \noindent %Prevents the following text from being indented
