Add missing comma

--- a/cv.tex
+++ b/cv.tex
@@ -121,7 +121,7 @@ A Pilot Study on Prostate Cancer Screening \\
 {\bf Advocate of:}  IaC, QA/test-automation, cloud-native architecture, small \& frequent releases, value teams\\ 
  \tab \tab \smallspace no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.) \\ \\
 \noindent
-{\bf Technologies:} \textbf{GCP, Terraform, Node.JS, Typescript, Serverless, Kubernetes BigQuery, PostGres, \\ 
+{\bf Technologies:} \textbf{GCP, Terraform, Node.JS, Typescript, Serverless, Kubernetes, BigQuery, PostGres, \\ 
 \tab \tab \smallspace  GraphQL, PubSub}, React, React-Native, AWS, Azure, Java, Python, ELK
 
 
