(chore): update cv

--- a/cv.tex
+++ b/cv.tex
@@ -29,8 +29,8 @@
 
 \begin{document}
 
-\centerline{{\LARGE \bf Jonas Laux, M.Sc.}}
-\centerline{\href{mailto:me@jonas-laux.com}{me@jonas-laux.com}}
+\centerline{{\LARGE \bf Peter Sperl, B.Sc.}}
+\centerline{\href{mailto:peter.sperl@outlook.com}{peter.sperl@outlook.com}}
 
 
 \noindent %Prevents the following text from being indented
@@ -42,58 +42,58 @@
 \noindent
 
 \noindent
-{\bf Senior Cloud Architect}, \textit{employee at \href{https://anyline.com}{Anyline}}  \hfill \textit{from June 2022} \\
-{\bf Cloud Architect}, \hfill \textit{May 2021 - December 2022} \\
-{\bf Full-Stack Engineer} \hfill \textit{March 2016 - May 2021}
+{\bf Senior Engineer \& Team Lead}, \textit{employee at \href{https://anyline.com}{Anyline}} \hfill \textit{2022 -- Present}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Establish best-practice and ISO-compliant IaC for optimal scalability and \hfill Vienna, Austria \\
-performance, while offering cloud setup consultation.
-\item Design, implement and deploy highly scalable workloads using Cloud native \\
-architectures in domains like Datalake, ML and internal services.
-\item Consultation to ensure effective cloud implementation, project requirements \\
-code reviews, and technical guidance to developers.
-\item Responsible for the core-backend design and implementation
-\item Responsible for infrastructure of storing/structuring/retrieving a steady \\ 
-growing stream of millions new images per day
+\item Led cross-functional development team responsible for browser-based (C++ and WebAssembly) & server-based
+(NestJS) scanning solutions
+\item Optimized CI/CD pipeline for faster deployments and automated testing
+\item Led development on C++ Core Engine and WebAssembly SDK
 \end{itemize}
 
 \noindent
-{\bf Technical Architect}, \textit{employee at \href{https://www.oebb.at/}{OEBB}}  \hfill \textit{January 2022 -- April 2022}
+{\bf Software Architect}, \hfill \textit{2020 -- 2022} \\
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Support the cloud migration of all systems and comprehend \hfill Vienna, Austria \\
-enterprise architecture for effective feature development.
-\item Collaborate with developers for project adherence and proactively \\ 
-strategize for product improvements.
+\item Reshaped the C++ engine and mobile SDKs, reducing development time for new features and standardizing scanning capabilities across all platforms.
+\item Led efforts to optimize the integration of cross-platform functionalities, minimizing redundancies and streamlining feature rollouts across Android, iOS, Windows, and web platforms.
 \end{itemize}
 
 \noindent
-{\bf Co-Founder \& Software-Engineer}, \textit{Apollon OG}  \hfill \textit{May 2019 -- August 2021}
+{\bf C++ \& C\# Engineer}, \hfill \textit{2018 -- 2020} \\
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Architect/development of MedTech, streamlining oncology processes in hospitals \hfill Vienna, Austria
+\item Ported the existing C++ engine to the Windows platform, creating a Universal Windows Platform (UWP) SDK in C\# from scratch to expand product reach.
+\item Integrated our UWP SDK into a Hololens Application via Unity to create an innovative scanning capabilities
 \end{itemize}
 
 \noindent
-{\bf Backend Developer}, \textit{employee at Immowire}  \hfill \textit{March 2015 -- December 2015}
+{\bf Xamarin SDK Engineer}, \hfill \textit{2015 -- 2017} \\
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Development, deployment and maintainance of an Real-Estate marketplace with NodeJS and OrientDB \hfill Remote
+\item Developed the Anyline Xamarin SDK for Android and iOS from the ground up, establishing a solid foundation for future SDK developments.
+\item Focused on mobile-based computer vision solutions, collaborating on early product iterations and building core functionality.
 \end{itemize}
 
+\noindent %Prevents the following text from being indented
+\\
+\\
+\vspace*{-6pt}
+{\negativespace \Large \bf Projects \& Developer Community Engagement}\\
+\line(1,0){485}
+\\
 \noindent
-{\bf Web Developer}, \textit{employee at Kutech}  \hfill \textit{June 2014 -- December 2014}
-\begin{itemize}
-\setlength\itemsep{0.05em}
-\item Development of Webpages and Plugins for Redaxo-based customer solutions \hfill Asperhofen, Austria
-\end{itemize}
 
 \noindent
-{\bf Web Developer}, \textit{employee at Kaufhaus.com}  \hfill \textit{2012 - 2013}
+\textbf{Game Development:} Created multiple indie games using Unity, Monogame, Game Maker Studio and other frameworks \\
+\textbf{Hackathon Participant}: Regular participant in game jams and coding competitions (15+ events) \\
+\textbf{Notable Achievements}: \\
 \begin{itemize}
-\setlength\itemsep{0.05em}
-\item Develop, deploy and maintain a multi e-commerce platform with PHP and JQuery \hfill Gießen, Germany
+\item \href{https://ldjam.com/events/ludum-dare/55/tao}{Tao} - 8th overall place out of 2000+ submissions (written in LUA \& pico8)
+\item \href{https://www.newgrounds.com/portal/view/599044}{Llama in your Face} - A browser game reaching over 6 million players worldwide
+\item \href{https://ldjam.com/users/leorean/games}{More Game Submissions}
+\item \href{https://github.com/leorean/GMStudio}{Vast collection} of 50+ Game Maker-based prototypes
+\item \href{https://github.com/leorean/SPG}{SPG} - A XNA-based SDK for game development
 \end{itemize}
 
 \noindent %Prevents the following text from being indented
@@ -103,26 +103,14 @@ strategize for product improvements.
 \line(1,0){485}\\
 \\
 \noindent
-{\bf Master of Science - Media Informatics} \hfill \textit{2018} \\ 
-\textit{Universität Wien (Thesis: \href{https://utheses.univie.ac.at/detail/48070/}{Rnd for an automized training for CNNs with generated Data} [Flask, Tensorflow])} \\\\
-\noindent
-{\bf Bachelor of Science - Media Informatics} \hfill \textit{2013} \\
-\textit{Technische Hochschule Mittelhessen (Thesis: API concept for an E-Commerce Marketplace [Zend])} \\
+{\bf Bachelor of Science - Medical Informatics} \hfill \textit{2013} \\
+\textit{Technische Universität Wien} \\
 \\
-\\
-\vspace*{-6pt}
-{\negativespace \Large \bf Publications}\\
-\line(1,0){485}\\
-{\bf \href{https://www.researchgate.net/publication/354259954_Toward_a_Platform_for_Structured_Data_Acquisition_in_Oncology_A_Pilot_Study_on_Prostate_Cancer_Screening}{Toward a Platform for Structured Data Acquisition in Oncology}} \hfill \textit{August 2021} \\ 
-A Pilot Study on Prostate Cancer Screening \\ 
 \\
 
 \noindent
-{\bf Advocate of:}  IaC, QA/test-automation, cloud-native architecture, small \& frequent releases, value teams\\ 
- \tab \tab \smallspace no one-fits-all-projects architecture (monoliths, microservices, serverless, etc.) \\ \\
-\noindent
-{\bf Technologies:} \textbf{GCP, Terraform, Node.JS, Typescript, Serverless, Kubernetes, BigQuery, PostGres, \\ 
-\tab \tab \smallspace  GraphQL, PubSub}, React, React-Native, AWS, Azure, Java, Python, ELK
+{\bf Technologies \& Frameworks:} \textbf{UWP, .NET, Unity, Xamarin, XNA, Monogame, Game Maker Studio} \\
+{\bf Languages:} \textbf{C\#, C++}, Python, Java, LUA, GML (Game Maker Language)
 
 
 \end{document}
