(chore): update cv

--- a/cv.tex
+++ b/cv.tex
@@ -31,6 +31,8 @@
 
 \centerline{{\LARGE \bf Peter Sperl, B.Sc.}}
 \centerline{\href{mailto:peter.sperl@outlook.com}{peter.sperl@outlook.com}}
+\centerline{\href{https://github.com/leorean}{Github}}
+\centerline{\href{https://www.linkedin.com/in/peter-sperl}{LinkedIn}}
 
 
 \noindent %Prevents the following text from being indented
@@ -45,35 +47,31 @@
 {\bf Senior Engineer \& Team Lead}, \textit{employee at \href{https://anyline.com}{Anyline}} \hfill \textit{2022 -- Present}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Led cross-functional development team responsible for browser-based (C++ and WebAssembly) & server-based
-(NestJS) scanning solutions
+\item Led cross-functional development team responsible for mobile, desktop (C\texttt{\#}), browser-based (C\texttt{++} and WebAssembly) \& server-based (NestJS) scanning solutions
+\item Reshaped browser-based C\texttt{++} engine, streamlining feature delivery between platforms
 \item Optimized CI/CD pipeline for faster deployments and automated testing
-\item Led development on C++ Core Engine and WebAssembly SDK
+\item Redesigned legacy C\texttt{++} monitoring module, improving stability and scalability
+\end{itemize}
+
+
+\noindent
+{\bf Senior Engineer}  \hfill \textit{2020 -- 2022} 
+\begin{itemize}
+\setlength\itemsep{0.05em} 
+\item Built a C\texttt{++} framework for platform-independent scanning, reducing development time and standardizing capabilities across all platforms
+\item Led UWP SDK development to overhaul cross-platform architecture, improving performance, robustness, and ease of integration for customers
+\item Led development of patented technology for \href{https://anyline.com/news/rapid-ai-with-closed-loop-training}{over-the-air deployment}, allowing continuous retraining of computer vision and ML models to enhance accuracy using new, real-world data.
 \end{itemize}
 
 \noindent
-{\bf Software Architect}, \hfill \textit{2020 -- 2022} \\
+{\bf C\texttt{++} \& C\texttt{\#} Engineer} \hfill \textit{2015 -- 2020}
 \begin{itemize}
 \setlength\itemsep{0.05em}
-\item Reshaped the C++ engine and mobile SDKs, reducing development time for new features and standardizing scanning capabilities across all platforms.
-\item Led efforts to optimize the integration of cross-platform functionalities, minimizing redundancies and streamlining feature rollouts across Android, iOS, Windows, and web platforms.
+\item Built the \href{https://github.com/Anyline/anyline-ocr-xamarin-module}{Xamarin SDK} for Android and iOS
+\item Ported the C\texttt{++} engine to Windows and created a C\texttt{++}/C\texttt{\#} bridge for seamless UWP integration
+\item Built the \href{https://github.com/Anyline/anyline-ocr-examples-windows-uwp}{UWP SDK} in C\texttt{\#}
 \end{itemize}
 
-\noindent
-{\bf C++ \& C\# Engineer}, \hfill \textit{2018 -- 2020} \\
-\begin{itemize}
-\setlength\itemsep{0.05em}
-\item Ported the existing C++ engine to the Windows platform, creating a Universal Windows Platform (UWP) SDK in C\# from scratch to expand product reach.
-\item Integrated our UWP SDK into a Hololens Application via Unity to create an innovative scanning capabilities
-\end{itemize}
-
-\noindent
-{\bf Xamarin SDK Engineer}, \hfill \textit{2015 -- 2017} \\
-\begin{itemize}
-\setlength\itemsep{0.05em}
-\item Developed the Anyline Xamarin SDK for Android and iOS from the ground up, establishing a solid foundation for future SDK developments.
-\item Focused on mobile-based computer vision solutions, collaborating on early product iterations and building core functionality.
-\end{itemize}
 
 \noindent %Prevents the following text from being indented
 \\
@@ -85,15 +83,16 @@
 \noindent
 
 \noindent
-\textbf{Game Development:} Created multiple indie games using Unity, Monogame, Game Maker Studio and other frameworks \\
-\textbf{Hackathon Participant}: Regular participant in game jams and coding competitions (15+ events) \\
-\textbf{Notable Achievements}: \\
+\textbf{Game Development:} Created multiple indie games using Unity, Monogame, Game Maker Studio and other frameworks
+\begin{itemize}
+\item \href{https://github.com/leorean/GMStudio}{Vast collection} of 50+ Game Maker-based prototypes
+\item \href{https://github.com/leorean/SPG}{SPG} - A XNA-based SDK for game development
+\end{itemize}
+\textbf{Hackathon Participant}: Regular participant in game jams and coding competitions (15+ events)
 \begin{itemize}
 \item \href{https://ldjam.com/events/ludum-dare/55/tao}{Tao} - 8th overall place out of 2000+ submissions (written in LUA \& pico8)
 \item \href{https://www.newgrounds.com/portal/view/599044}{Llama in your Face} - A browser game reaching over 6 million players worldwide
-\item \href{https://ldjam.com/users/leorean/games}{More Game Submissions}
-\item \href{https://github.com/leorean/GMStudio}{Vast collection} of 50+ Game Maker-based prototypes
-\item \href{https://github.com/leorean/SPG}{SPG} - A XNA-based SDK for game development
+\item \href{https://ldjam.com/users/leorean/games}{Other Game Submissions}
 \end{itemize}
 
 \noindent %Prevents the following text from being indented
@@ -103,14 +102,22 @@
 \line(1,0){485}\\
 \\
 \noindent
-{\bf Bachelor of Science - Medical Informatics} \hfill \textit{2013} \\
+{\bf Master of Science - Medical Informatics} (thesis not submitted) \hfill \textit{2013 - 2015} \\
+\textit{Technische Universität Wien} \\
+\\
+{\bf Bachelor of Science - Medical Informatics} \hfill \textit{2008 - 2013} \\
 \textit{Technische Universität Wien} \\
 \\
 \\
-
+\\
+\\
+\\
+\\
+\\
+\\
 \noindent
-{\bf Technologies \& Frameworks:} \textbf{UWP, .NET, Unity, Xamarin, XNA, Monogame, Game Maker Studio} \\
-{\bf Languages:} \textbf{C\#, C++}, Python, Java, LUA, GML (Game Maker Language)
+{\bf Technologies \& Frameworks:} .NET, UWP, WPF, Unity, Xamarin, XNA, Monogame, Game Maker Studio, GCP \\
+{\bf Languages:} C\texttt{\#}, C\texttt{++}, Python, Java, LUA, GML (Game Maker Language)
 
 
 \end{document}
